--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ out/production/RegexingAlghoritm/util/ListUtilKt.class
 out/production/RegexingAlghoritm/util/MathUtilKt.class
 out/production/RegexingAlghoritm/util/RegexUtilKt.class
 out/production/RegexingAlghoritm/util/StringUtilKt.class
+.idea/vcs.xml
