--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ out/production/RegexingAlghoritm/util/MathUtilKt.class
 out/production/RegexingAlghoritm/util/RegexUtilKt.class
 out/production/RegexingAlghoritm/util/StringUtilKt.class
 .idea/vcs.xml
+out/
